# Basic2DFluidDynamics

./: .gitignore  CMakeLists.txt  README.md
resources/: PlanetEarth.json  SunSol.json
src/: AbstractDataStructure.h  AbstractPWMDataStructure.h  Basic2DFluidDynamics.cpp  Coordinate.cpp  Coordinate.h  FlatMACTest.cpp  abstractEngine.cpp  abstractEngine.h  advectionEngine.h  airLayer.h  atmofuncs.h  flatStaggeredGrid.h  fluidLayer.h  mathUtils.h  obstaclesEngine.h  planet.cpp  planet.h  pressureEngine.h  settings.cpp  settings.h  vizUtils.h
